--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         <!-- Left Side - Header Section -->
         <div class="header-section">
             <img src="header.png" alt="Header" class="header-image">
-            <p class="header-subtext">Click on the watch buttons to visit Anna Dating!</p>
+            <!-- <p class="header-subtext">Click on the watch buttons to visit Anna Dating!</p> -->
             <div class="desktop-buttons">
                 <a href="https://ezvrhoowk8u.typeform.com/to/SgW5VT44" target="_blank" class="mailing-button">Join Mailing List</a>
             </div>
